# doc-to-markdown

./: README.md  pyproject.toml
src/doc2md/: __init__.py  cli.py  converter.py  excel_converter.py  models.py  odl_converter.py  pdf_converter.py  word_converter.py
tests/: test_excel_converter.py  test_pdf_converter.py  test_word_converter.py
