[project]
name = "doc2md"
version = "0.2.0"
description = "Multi-format document to Markdown converter for RAG pipelines"
requires-python = ">=3.12"
dependencies = [
    "mammoth>=1.9.0",
    "pandas>=2.2.0",
    "tabulate>=0.9.0",
    "openpyxl>=3.1.0",
    "pymupdf>=1.24.0",
    "opencv-python-headless>=4.8.0",
]

[project.optional-dependencies]
pdf = ["mineru[all]"]
odl = ["opendataloader-pdf"]

[project.scripts]
doc2md = "doc2md.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/doc2md"]
